<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="all">

    <item
        android:id="@+id/fragmentHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/menu_main_home" />
    <item
        android:id="@+id/fragmentLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_category"
        android:title="@string/categories" />
    <item
        android:id="@+id/fragmentNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/car_repair"
        android:title="@string/menu_main_notes"
        />

</group>
</menu>
