<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">

        <item
            android:id="@+id/menu_compartir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/shared_reviews"
            android:title="@string/menu_home_shared"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_mail"
            android:title="@string/menu_home_email"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/policy"
            android:title="@string/menu_home_policy"
            app:showAsAction="ifRoom" />
    </group>
</menu>
